name: obelisk-datasource
version: 0.2
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 aeson,
                 aeson-gadt-th,
                 bytestring,
                 constraints,
                 constraints-extras,
                 containers,
                 ghcjs-dom,
                 mtl,
                 obelisk-executable-config-frontend,
                 obelisk-route,
                 primitive,
                 reflex,
                 reflex-dom-core,
                 ref-tf,
                 transformers,
                 text
  exposed-modules: Obelisk.DataSource
  ghc-options: -Wall -fwarn-redundant-constraints
